@@ -1,7 +1,8 @@
 use strict;
 use warnings;
 
-use Test::More;
+use Test::Fatal;
+use Test::More 0.88;
 
 use DateTime;
 
@@ -119,6 +120,18 @@ my %vals = (
         is( $dt->year,  2003, 'truncation to week across month boundary' );
         is( $dt->month, 9,    'truncation to week across month boundary' );
         is( $dt->day,   29,   'truncation to week across month boundary' );
+    }
+}
+
+{
+    my $dt = DateTime->new(%vals);
+
+    for my $bad (qw( seconds minutes year_foo month_bar )) {
+        like(
+            exception { $dt->truncate( to => $bad ) },
+            qr/\QThe 'to' parameter/,
+            "bad truncate parameter ($bad) throws an error"
+        );
     }
 }
 
