@@ -3,6 +3,11 @@
 - The %j specifier for strftime was not zero-padding 1 and 2 digit numbers. RT
   #84310. Fixed by Christian Hansen.
 
+- The truncate method was sloppy about validating its "to" parameter, so you
+  could pass things like "years" or "month whatever anything goes". The method
+  would accept the parameter but then not actually truncate the object. RT
+  #84229.
+
 
 0.78   2012-11-16
 
